--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
     },
     "dependencies": {
         "@types/node": "20.3.2",
@@ -22,6 +24,13 @@
     "devDependencies": {
         "@commitlint/cli": "^17.6.6",
         "@commitlint/config-conventional": "^17.6.6",
+        "@storybook/addon-essentials": "^7.0.24",
+        "@storybook/addon-interactions": "^7.0.24",
+        "@storybook/addon-links": "^7.0.24",
+        "@storybook/blocks": "^7.0.24",
+        "@storybook/nextjs": "^7.0.24",
+        "@storybook/react": "^7.0.24",
+        "@storybook/testing-library": "^0.0.14-next.2",
         "@typescript-eslint/eslint-plugin": "^5.60.1",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.8.0",
@@ -29,8 +38,10 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-storybook": "^0.6.12",
         "husky": "^8.0.3",
         "lint-staged": "^13.2.2",
-        "prettier": "^2.8.8"
+        "prettier": "^2.8.8",
+        "storybook": "^7.0.24"
     }
 }
