--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "start": "next start",
         "lint": "next lint",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
+        "build-storybook": "storybook build",
+        "test": "jest --watch"
     },
     "dependencies": {
         "@types/node": "20.3.2",
@@ -32,6 +33,9 @@
         "@storybook/nextjs": "^7.0.24",
         "@storybook/react": "^7.0.24",
         "@storybook/testing-library": "^0.0.14-next.2",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^14.0.0",
+        "@testing-library/user-event": "^14.4.3",
         "@typescript-eslint/eslint-plugin": "^5.60.1",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.8.0",
@@ -41,6 +45,8 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-storybook": "^0.6.12",
         "husky": "^8.0.3",
+        "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
         "lint-staged": "^13.2.2",
         "prettier": "^2.8.8",
         "storybook": "^7.0.24"
