--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@storybook/testing-library": "^0.0.14-next.2",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
+        "@testing-library/react-hooks": "^8.0.1",
         "@testing-library/user-event": "^14.4.3",
         "@typescript-eslint/eslint-plugin": "^5.60.1",
         "eslint-config-airbnb": "^19.0.4",
@@ -53,6 +54,7 @@
         "jest-environment-jsdom": "^29.5.0",
         "lint-staged": "^13.2.2",
         "prettier": "^2.8.8",
+        "react-test-renderer": "^18.2.0",
         "storybook": "^7.0.24"
     }
 }
