--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
         "@types/react-dom": "18.2.6",
         "eslint": "8.43.0",
         "eslint-config-next": "13.4.7",
+        "gotrue-js": "^0.9.29",
         "next": "13.4.7",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-toastify": "^9.1.3",
         "styled-components": "^6.0.0-rc.6",
         "typescript": "5.1.3"
     },
