--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "react-dom": "18.2.0",
         "react-toastify": "^9.1.3",
         "styled-components": "^6.0.0-rc.6",
-        "typescript": "5.1.3"
+        "typescript": "5.1.3",
+        "uuidv4": "^6.2.13"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.6.6",
