feat: basic openai working lambda

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,2 @@
 OPENAI_API_KEY=
-AIRTABLE_API_KEY=
-NEXT_PUBLIC_GOTRUE_SITE_URL=https://ai-text-generator-challenge.netlify.app/
+NEXT_PUBLIC_GOTRUE_SITE_URL=
