--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "test:ci": "jest --config ./jest.config.js --collectCoverage --coverageDirectory=\"./coverage-reports\" --ci --reporters=default  --watchAll=false"
     },
     "dependencies": {
+        "@netlify/functions": "^1.6.0",
         "@types/node": "20.3.2",
         "@types/react": "18.2.14",
         "@types/react-dom": "18.2.6",
@@ -23,6 +24,7 @@
         "eslint-config-next": "13.4.7",
         "gotrue-js": "^0.9.29",
         "next": "13.4.7",
+        "openai": "^3.3.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-toastify": "^9.1.3",
