fix: update env file sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
 OPENAI_API_KEY=
 # this is usually the main domain url
 NEXT_PUBLIC_GOTRUE_SITE_URL=
+# after running netlify dev, the url endpoint for the local functions
+# for example: http://localhost:8888/
+NEXT_PUBLIC_LOCAL_ENDPOINT_URL=
