--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
+        "lambda:dev": "netlify dev",
+        "lambda:release": "netlify deploy --prod",
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
         "test": "jest",
