fix: update env variable usage

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,8 @@
+# your OpenAI api key, see: https://platform.openai.com/account/api-keys
 OPENAI_API_KEY=
-# this is usually the main domain url
+# this is usually the main domain url (exclude trailing slash)
 NEXT_PUBLIC_GOTRUE_SITE_URL=
-# after running netlify dev, the url endpoint for the local functions
-# for example: http://localhost:8888/
+# after running netlify dev, the base url endpoint, for example: http://localhost:8888 (exclude trailing slash)
 NEXT_PUBLIC_LOCAL_ENDPOINT_URL=
+# npm flags to be injected during build on Netlify, example: --legacy-peer-deps
+NPM_FLAGS=
