--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.css linguist-detectable=false
-*.js linguist-detectable=true
-*.ts linguist-detectable=true
-*.tsx linguist-detectable=true
+* linguist-vendored
+*.js linguist-vendored=false
+*.ts linguist-vendored=false
+*.tsx linguist-vendored=false
